# libzcap

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.zig  build.zig.zon  build_examples.sh  build_release.sh
.github/scripts/: run_examples_unix.sh  run_examples_windows.ps1
.github/workflows/: e2e.yml  release.yml
cli/: main.zig  test_capture.zig
cmake_test/: CMakeLists.txt  libzcap_stub.c  test_api.c  test_pcap  test_pcap.c
docs/: README.md  getting-started.md
docs/examples/: c99-async-select.md  c99-bpf-filter.md  c99-dump-flush.md  c99-error-surface.md  c99-filtered-file-capture.md  c99-find-devices.md  c99-linux-kernel-features.md  c99-live-capture.md  c99-live-options.md  c99-next-and-stats.md  c99-nonblocking-stats.md  c99-offline-protocol-stats.md  c99-pcap-dump.md  c99-send-packet.md  cpp11-async-native-wait.md  cpp11-async-select.md  cpp11-dump-flush.md  cpp11-error-surface.md  cpp11-find-devices.md  cpp11-nonblocking-stats.md  cpp11-offline-read.md  cpp11-offline-split.md  cpp11-offline-transport-split.md  cpp11-send-packet.md
docs/features/: advanced-workflows.md  compatibility-layer.md  linux-kernel-capabilities.md  platform-backends.md  zero-copy.md
examples/: 01_basic_capture  01_basic_capture.c  02  02_pcap_dump.c  03  03_offline_read.cpp  04  04_bpf_filter.c  05_next_and_stats.c  06_filtered_capture_to_file.c  07_offline_split_ipv4.cpp  08_offline_protocol_stats.c  09_offline_split_transport.cpp  10_live_capture_options.c  11_findalldevs_lookupdev.c  12_nonblocking_stats.c  13_send_packet.c  15_findalldevs_lookupdev.cpp  16_nonblocking_stats.cpp  17_send_packet.cpp  18_async_select.c  18_async_select.cpp  19_async_native_wait.cpp  20_linux_kernel_features.c  21_error_surface.c  21_error_surface.cpp  22_dump_flush.c  22_dump_flush.cpp  CMakeLists.txt  README.md
include/: libzcap.h  zpcap.h
src/: lib.zig  ring.zig  stats.zig
src/api/: native.zig  pcap_compat.zig
src/capture/: bsd.zig  handle.zig  kernel.zig  linux.zig  macos.zig  windows.zig
src/filter/: cbpf.zig  compiler.zig
src/pcap_file/: reader.zig  writer.zig
src/proto/: ethernet.zig  ipv4.zig  ipv6.zig  sctp.zig  tcp.zig  udp.zig
src/test/: all.zig  cbpf_test.zig  filter_test.zig  kernel_test.zig  proto_test.zig
src/test/testzcap/: msglog_001001_20260323_122248.pcap  msglog_001002_20260323_123113.pcap  msglog_001003_20260323_123938.pcap  msglog_001004_20260323_124759.pcap  msglog_001005_20260323_125623.pcap  msglog_001006_20260323_130445.pcap  msglog_001007_20260323_131312.pcap  msglog_001008_20260323_132133.pcap  msglog_001009_20260323_132954.pcap  msglog_001010_20260323_133823.pcap  msglog_001011_20260323_134642.pcap
tests/: sample.pcap
tools/: linux_feature_probe.zig
